--- a/sass/product/vtex.store-link.scss
+++ b/sass/product/vtex.store-link.scss
@@ -44,4 +44,23 @@
       width: 100%;
     }
   }
+  &--assistenzaLink{
+    background-color: #FED608;
+    border-radius: 20px;
+    padding: 10px 20px 8px;
+    font-size: 24px;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+  }
+  &--assistenzaLink:hover{
+    background-color: #e3c011;
+    border-radius: 20px;
+    padding: 10px 20px 8px;
+    font-size: 22px;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+  }
+
 }
